--- a/calc.html
+++ b/calc.html
@@ -1,10 +1,19 @@
 <html>
     <head>
         <title>Calculator</title>
-    </head>
-    <body>
-        <h1>Calculator</h1>
+        <link href="css/styles.css" rel="stylesheet" type="text/css">
+        <!-- CSS only -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script src="js/scripts.js"></script>
+    </head>
+    <body>
+        <h1>Calculator</h1> 
+        <form id="add">
+            <div class="form-group"> <label for="add1">1st number:</label> <input id="add1" class="form-control" type="text"> </div>
+            <div class="form-group"> <label for="add2">2nd number:</label> <input id="add2" class="form-control" type="text"> </div>
+            <button type="submit" class="btn">Add!</button> 
+        </form>
+        <div id="output"> </div>
     </body>
 </html>
